Fix bug with fragment identifiers and overflow: hidden

--- a/assets/less/account.less
+++ b/assets/less/account.less
@@ -55,8 +55,8 @@ section.account .wrapper {
 	padding-left: 0;
 }
 
-#affwp-affiliate-dashboard .row,
-.account .row {
+// Hide any borders.
+.account-nav {
 	overflow: hidden;
 }
 
